k8s/policy/validate-task-request-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidateTaskRequest
metadata:
  name: task-request-valid-requirements
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [policydriven.unimi.it]
        kinds: [TaskRequest]
