k8s/policy/validate-task-request-datasets-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidateTaskRequestDatasets
metadata:
  # TODO fare piu template e constraint di verifica tipo 
  # K8sValidateTaskRequestDatasetsProperties, K8sValidateTaskRequestDatasetsExistence ecc...
  name: task-request-datasets-exist
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [policydriven.unimi.it]
        kinds: [TaskRequest]
