k8s/policy/validate-task-request-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8svalidatetaskrequest
spec:
  crd:
    spec:
      names:
        kind: K8sValidateTaskRequest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8svalidatetaskrequest
        
        # ---------------------------------------------------------------------------
        # Violation 1: TaskRequest is instantiated in a namespace different from 'compute'
        # ---------------------------------------------------------------------------
        violation[{"msg": msg}] {
          input.review.object.metadata.namespace != "compute"
          msg := sprintf("Operation denied, TaskRequest can only be instantiated in the 'compute' namespace. Requested namespace: '%v'", [input.review.object.metadata.namespace])
        }
      
        # ---------------------------------------------------------------------------
        # Violation 2: property name does not exist as a NodeProperty
        # ---------------------------------------------------------------------------
        violation[{"msg": msg}] {
          requirements := input.review.object.spec.requirements
          requirements != null

          some prop_name
          req_level = requirements[prop_name]

          req_level > 0

          not valid_property_level(prop_name, req_level)

          not data.inventory.cluster["policydriven.unimi.it/v1alpha1"]["NodeProperty"][prop_name]
          
          msg := sprintf("Property '%v' with level '%v' is invalid: either the property does not exist or the requested level exceeds the maximum defined for that property.", [prop_name, req_level])
        }

        # ---------------------------------------------------------------------------
        # Helper function to check if the requested level is valid for the property
        # ---------------------------------------------------------------------------
        valid_property_level(prop_name, req_level) {
          prop := data.inventory.cluster["policydriven.unimi.it/v1alpha1"]["NodeProperty"][prop_name]
          
          some i
          prop.spec.levels[i].level == req_level
        }
